# tidyrun

./: .agent.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  package-preview.yml  publish-pypi.yml
conda.recipe/: recipe.yaml
docs/: contributing.md  dag.md  design-decisions.md  executors.md  index.md  quick_start.md  serialization.md
scripts/: export_docs_pdf.py
src/tidyrun/: __init__.py  aws_batch_executor.py  constants.py  dag.py  execute.py  job.py  keys.py  plan.py  progress.py  serialize.py  slurm_executor.py
src/tidyrun/executors/: __init__.py  aws_batch.py  slurm.py
src/tidyrun/serialization/: __init__.py  __init__.pyi  api.py  encoders.py  lazy_dict.py  metadata.py  paths.py  s3.py  types.py
tests/: test_aws_batch_executor_moto.py  test_batch_entrypoint.py  test_batch_runner_s3.py  test_container_runner.py  test_dag_execution_modes.py  test_dag_failure_handling.py  test_dag_job.py  test_dag_subprocess.py  test_keys.py  test_plan_as_text.py  test_s3_execution.py  test_slurm_executor.py  test_ux_improvements.py  test_version.py
tests/executors/: test_aws_batch.py  test_aws_batch_moto.py  test_slurm.py
tests/serialization/: test_api.py  test_encoders.py  test_lazy_dict.py
