[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyrun"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "TidyRun"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
version = "0.0.6"
requires-python = ">= 3.9"
dependencies = [
    "toml>=0.10",
    "cloudpickle>=3.0",
    "cloudpathlib>=0.20",
]

[project.scripts]
tidyrun-batch-entrypoint = "tidyrun.dag:batch_entrypoint"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3]>=5.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.0",
    "pymdown-extensions>=10.0",
]
dev = [
    "pre-commit>=4.0",
    "pyright>=1",
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3]>=5.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.0",
    "pymdown-extensions>=10.0",
]
s3 = [
    "boto3>=1.0",
]

[project.urls]
Homepage = "https://github.com/mwouts/tidyrun"
Documentation = "https://mwouts.github.io/tidyrun/"
Repository = "https://github.com/mwouts/tidyrun.git"
Issues = "https://github.com/mwouts/tidyrun/issues"

[tool.hatch.build.targets.sdist]
only-include = ["src/tidyrun"]
artifacts = [
    "src/tidyrun/py.typed",
    ]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tidyrun"]
artifacts = [
    "src/tidyrun/py.typed",
    ]

[tool.pyright]
typeCheckingMode = "standard"
include = [
    "src/tidyrun",
    "tests",
    "docs",
    ]
strict = [
    "docs",
    "src/tidyrun/",
    ]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
tidyrun = {path = ".", extras = ["dev"], editable = true}

[tool.pixi.feature.build.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.build.tasks]
# pixi run -e build publish-test
publish-test = { depends-on = ["build-dist"], cmd = "twine upload --repository testpypi dist/*" }
build-dist = "rm -rf dist && python -m build"

[tool.pixi.feature.notebook.dependencies]
jupyterlab = ">=4"

[tool.pixi.feature.kernel.dependencies]
ipykernel = ">=6"

[tool.pixi.feature.kernel.tasks]
register-kernel = "python -m ipykernel install --user --name tidyrun-kernel --display-name TidyRun"

[tool.pixi.feature.pdf.pypi-dependencies]
playwright = "*"
pypdf = "*"

[tool.pixi.feature.pdf.tasks]
install-pdf-browser = "playwright install chromium"
docs-pdf = "mkdocs build -q && python scripts/export_docs_pdf.py"

[tool.pixi.environments]
default = { solve-group = "default" }
build = { features = ["build"], no-default-feature = false, solve-group = "default" }
docs = { solve-group = "default" }
notebook = { features = ["notebook"], solve-group = "default" }
kernel = { features = ["kernel"], solve-group = "default" }
pdf = { features = ["pdf"], solve-group = "default" }

[tool.pixi.dependencies]
toml = "*"
pandas = "*"
pyarrow = "*"  # parquet support
pytables = "*"  # HDF5 support
mkdocs = ">=1.5"
mkdocs-material = ">=9.0"
mkdocstrings = ">=0.24"
mkdocstrings-python = ">=1.0"
pymdown-extensions = ">=10.0"
pytest-xdist = ">=3.8.0,<4"

[tool.pixi.tasks]
docs-serve-local = { cmd = "mkdocs serve -a 0.0.0.0:8000", description = "Serve docs on the local network (open http://<your-ip>:8000 on your phone)" }
